content/browser/accessibility/browser_accessibility.cc
@@ -877,6 +877,9 @@ gfx::Rect BrowserAccessibility::RelativeToAbsoluteBounds(
       }
     }
 
+    if (frame_only)
+      break;
+
     node = root->PlatformGetParent();
   }
 
